--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "react-virtuoso": "^4.7.11",
     "react-webcam": "^7.2.0",
     "react-window": "^1.8.10",
-    "redux": "^4.2.1",
-    "vite-plugin-pwa": "^0.14.7"
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@types/howler": "^2.2.7",
@@ -71,6 +70,7 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.2",
-    "vite-plugin-mkcert": "^1.14.0"
+    "vite-plugin-mkcert": "^1.14.0",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
