--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "normalize.css": "^8.0.1",
+    "pdfjs-dist": "^2.16.105",
     "prop-types": "^15.8.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
